it tests